# syslog-ng-rust-modules

./: .gitignore  .travis.yml  CMakeLists.txt  Cargo.toml  PROPOSAL.md  README.md  build.rs  cargo-test.sh  install.sh  libsyslog_ng_rust_modules.pc
.travis/: cargo-test.sh  install-ivykis.sh  install-syslog-ng.sh  rust-cpython-upgrade-hack.sh  test-cmake.sh  test-everything.sh
_test_module/: __init__.py  test_logging.py
actiondb-parser/: CMakeLists.txt  Cargo.toml  README.md  cargo-test.sh
actiondb-parser/actiondb/src/matcher/pattern/: mod.rs
actiondb-parser/actiondb/src/matcher/pattern/file/: mod.rs
actiondb-parser/actiondb/src/matcher/suffix_array/: impls.rs  interface.rs  test.rs
actiondb-parser/actiondb/src/matcher/trie/node/: mod.rs
actiondb-parser/benches/: parse.rs
actiondb-parser/scl/actiondb-parser/: plugin.conf
actiondb-parser/src/: keys.rs  lib.rs  msgfilller.rs  options.rs
benches/: loggen.json  parse.rs
cmake/Modules/: CheckMultirust.cmake  CheckRustup.cmake  FindCargo.cmake  FindRust.cmake  UsePkgConfig.cmake  UseRust.cmake
correlation/: README.md
correlation-parser/: CMakeLists.txt  Cargo.toml
correlation-parser/correlation/: Cargo.toml
correlation-parser/correlation/src/: lib.rs  state.rs
correlation-parser/correlation/src/config/: deser.rs  mod.rs
correlation-parser/correlation/src/config/action/deser/: mod.rs
correlation-parser/correlation/src/config/action/message/: mod.rs
correlation-parser/correlation/src/context/: base.rs  context_map.rs  linear.rs  mod.rs  test.rs
correlation-parser/correlation/src/context/map/: map.rs  mod.rs
correlation-parser/correlation/src/correlator/: error.rs  factory.rs  message.rs  mod.rs  test.rs
correlation-parser/correlation/src/message/: builder.rs  test.rs
correlation-parser/correlation/src/test_utils/: template.rs
correlation-parser/correlation/tests/correlator/: mod.rs
correlation-parser/scl/correlation-parser/: plugin.conf
correlation-parser/src/: lib.rs  logevent.rs  logtemplate.rs  mock.rs  timer.rs
correlation-parser/src/logtemplate/: mod.rs
correlation-parser/tests/: empty_pattern.json  parse.rs  spinning.yml  timer.rs
correlation/src/: action.rs  conditions.rs  lib.rs  reactor.rs  state.rs  timer.rs
correlation/src/config/: deser.rs  mod.rs
correlation/src/context/: base.rs  context_map.rs  linear.rs  mod.rs  test.rs
correlation/src/correlator/: error.rs  factory.rs  message.rs  mod.rs  (+2 more)
dummy-filter/: Cargo.toml
dummy-filter/src/: lib.rs
dummy-lib/: CMakeLists.txt  Cargo.toml
dummy-lib/src/: lib.rs
dummy-parser/: Cargo.toml
dummy-parser/src/: lib.rs
dummy_filter/: Cargo.toml
dummy_filter/src/: lib.rs
in-list-filter/: Cargo.toml
in-list-filter/src/: lib.rs
in_list_filter/: Cargo.toml
include/: rust-filter-proxy.h  rust-parser-proxy.h
kvtagger-rs-parser/: CMakeLists.txt  Cargo.toml  build.rs
kvtagger-rs-parser/benches/: bigcsv.csv  tagging.rs
kvtagger-rs-parser/scl/kvtagger-rs-parser/: plugin.conf
kvtagger-rs-parser/src/: lib.rs  lookup_table.rs  utils.rs
kvtagger-rs-parser/tests/: exotic.csv  load_csv.rs  more_columns.csv  parser.rs  test.csv  unparseable.csv
python-parser/: CMakeLists.txt  Cargo.toml  README.md
python-parser/_test_module/: __init__.py  regex.py
python-parser/benches/: parse.rs
python-parser/scl/python-parser/: plugin.conf
python-parser/src/: lib.rs  py_logmsg.rs  utils.rs
python-parser/tests/: logging.rs  parser.rs  parser_builder.rs  py_logmsg.rs
regex-parser/: CMakeLists.txt  Cargo.toml  README.md
regex-parser/benches/: parse.rs
regex-parser/scl/regex-parser/: plugin.conf
regex-parser/src/: lib.rs  tests.rs
src/: action.rs  condition.rs  conditions.rs  config.rs  context.rs  correlator.rs  dispatcher.rs  duration.rs  event.rs  filter.rs  intologmessage.rs  keys.rs  lib.rs  logevent.rs  logtemplate.rs  macros.rs  main.rs  message.rs  mock.rs  msgfilller.rs  options.rs  py_logmsg.rs  reactor.rs  state.rs  tests.rs  timer.rs  utils.rs
src/action/: mod.rs
src/actions/: message.rs
src/config/: action.rs  deser.rs  mod.rs
src/context/: base.rs  context_map.rs  event.rs  linear.rs  mod.rs  test.rs
src/correlator/: error.rs  exit_handler.rs  factory.rs  mod.rs  test.rs
src/dispatcher/: demux.rs  mod.rs  reactor.rs  request.rs  response.rs
src/message/: builder.rs  mod.rs  test.rs  to_json.rs
src/proxies/: filter.rs  mod.rs  parser.rs
src/test_utils/: correlator.rs  mod.rs  responder.rs
syslog-ng-build/: Cargo.toml
syslog-ng-build/src/: lib.rs
syslog-ng-common/: Cargo.toml
syslog-ng-common/src/: cfg.rs  formatter.rs  lib.rs  logger.rs  logparser.rs  logtemplate.rs  messages.rs  plugin.rs  sys.rs
syslog-ng-common/src/logmsg/: mod.rs  test.rs
syslog-ng-common/src/logtemplate/: mod.rs  tests.rs
syslog-ng-common/src/proxies/: mod.rs  parser.rs
syslog-ng-common/src/proxies/parser/: mod.rs  option_error.rs  proxy.rs
syslog-ng-common/tests/: dummy-parser.rs  template_functions.rs
syslog-ng-rs/: .gitignore
syslog-ng-rs/syslog-ng-build/: Cargo.toml
syslog-ng-rs/syslog-ng-common/: Cargo.toml
syslog-ng-rs/syslog-ng-common/src/: cfg.rs  formatter.rs  lib.rs  logger.rs  logparser.rs  logpipe.rs  messages.rs  mock.rs  plugin.rs  sys.rs
syslog-ng-rs/syslog-ng-common/src/logmsg/: mod.rs
syslog-ng-rs/syslog-ng-common/src/logtemplate/: mod.rs  tests.rs
syslog-ng-rs/syslog-ng-common/src/proxies/: mod.rs
syslog-ng-rs/syslog-ng-common/src/proxies/parser/: error.rs  mod.rs  option_error.rs  proxy.rs
syslog-ng-rs/syslog-ng-common/tests/: dummy-parser.rs  panicking-parser.rs  template_functions.rs
syslog-ng-rs/syslog-ng-sys/: Cargo.toml  build.rs
syslog-ng-sys/: Cargo.toml  build.rs
syslog-ng-sys/src/: cfg.rs  ffi.rs  filter.rs  lib.rs  logger.rs  logmsg.rs  logparser.rs  logtemplate.rs  messages.rs  parser.rs
syslog-ng-sys/src/logmsg/: ffi.rs  mod.rs  test.rs
syslog-ng-sys/src/messages/: ffi.rs  mod.rs
syslog_ng_rust/: Cargo.toml
tests/: contexts.json  lib.rs  logging.rs  parse.rs  parser.rs  parser_builder.rs
tests/correlator/: contexts.json  mod.rs
(+66 files in other folders)
