[package]
name = "correlation-parser"
version = "0.1.0"
authors = ["Tibor Benke <ihrwein@gmail.com>"]
build = "build.rs"

[lib]
crate_type = ["dylib", "rlib"]

[dependencies]
log = "0.3"
env_logger = "0.3"

[dependencies.correlation]
path = "correlation"

[dependencies.syslog-ng-common]
path = "../syslog-ng-rs/syslog-ng-common/"

[build-dependencies.syslog-ng-build]
path = "../syslog-ng-rs/syslog-ng-build/"
