[package]
name = "correlation-parser"
version = "0.1.0"
authors = ["Tibor Benke <ihrwein@gmail.com>"]
build = "build.rs"

[lib]
crate_type = ["dylib", "rlib"]

[dependencies]
log = "0.3"
env_logger = "0.3"
syslog-ng-common = "0.7.0"

[dependencies.correlation]
path = "correlation"

[build-dependencies]
syslog-ng-build = "0.2.0"
