[package]
name = "actiondb-parser"
version = "0.4.0"
authors = ["Tibor Benke <tibor.benke@balabit.com>"]
build = "build.rs"
homepage = "https://github.com/ihrwein/actiondb-parser"
repository = "https://github.com/ihrwein/actiondb-parser"
readme = "README.md"
keywords = ["log", "parser"]
description = "A parser module for syslog-ng based on ActionDB"
license = "MIT/Apache-2.0"

[[bin]]
name = "adbtool"
path = "src/bin/adbtool.rs"

[lib]
crate_type = ["rlib", "dylib"]

[dependencies]
log = "0.3"
actiondb = { path = "actiondb" }
syslog-ng-common = { path = "../syslog-ng-rs/syslog-ng-common" }
clap = "2.3"

[build-dependencies]
syslog-ng-build = { path = "../syslog-ng-rs/syslog-ng-build" }
