[package]
name = "correlation-parser"
version = "0.1.0"
authors = ["Tibor Benke <ihrwein@gmail.com>"]

[lib]
name = "correlation_parser"

[dependencies]
log = "*"
serde = "0.6"
serde_json = "0.6"

[dependencies.correlation]
path = "../../correlation"

[dependencies.syslog-ng-common]
path = "../syslog-ng-common/"

[dependencies.syslog-ng-sys]
path = "../syslog-ng-sys/"
