[package]
name = "correlation-parser"
version = "0.1.2"
authors = ["Tibor Benke <ihrwein@gmail.com>"]
build = "build.rs"

[lib]
crate_type = ["dylib", "rlib"]

[dependencies]
log = "0.3"
env_logger = "0.3"
syslog-ng-common = { path = "../syslog-ng-rs/syslog-ng-common" }

[dependencies.correlation]
path = "correlation"

[build-dependencies]
syslog-ng-build = "0.2.0"
