[package]
name = "python-parser"
version = "0.1.0"
authors = ["Tibor Benke <ihrwein@gmail.com>"]
build = "build.rs"

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
syslog-ng-common = "0.7"
cpython = { git = "https://github.com/ihrwein/rust-cpython.git" }
log = "0.3"
env_logger = "0.3"

[build-dependencies]
syslog-ng-build = "0.2"

[features]
default = ["cpython/python-3-4"]
