[package]
name = "regex-parser"
version = "0.2.1"
authors = ["Tibor Benke <ihrwein@gmail.com>"]
build = "build.rs"

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
syslog-ng-common = { path = "../syslog-ng-rs/syslog-ng-common" }
regex = "0.1"
log = "0.3"

[build-dependencies]
syslog-ng-build = { path = "../syslog-ng-rs/syslog-ng-build" }
