[package]
name = "syslog-ng-build"
version = "0.2.0"
authors = ["Tibor Benke <ihrwein@gmail.com>"]
homepage = "https://github.com/ihrwein/syslog-ng-rs"
repository = "https://github.com/ihrwein/syslog-ng-rs"
keywords = ["syslog-ng"]
description = "Build script helpers"
license = "MIT/Apache-2.0"

[dependencies]
gcc = "0.3"
pkg-config = "0.3"
