[package]
name = "syslog-ng-common"
version = "0.7.0"
authors = ["Tibor Benke <ihrwein@gmail.com>"]
homepage = "https://github.com/ihrwein/syslog-ng-rs"
repository = "https://github.com/ihrwein/syslog-ng-rs"
keywords = ["syslog-ng"]
description = "High level bindings for syslog-ng"
license = "MIT/Apache-2.0"

[dependencies]
log = "0.3"
syslog-ng-sys = "0.3"
glib = "0.0.8"
