[package]
name = "syslog-ng-common"
version = "0.8.0"
authors = ["Tibor Benke <ihrwein@gmail.com>"]
homepage = "https://github.com/ihrwein/syslog-ng-rs"
repository = "https://github.com/ihrwein/syslog-ng-rs"
keywords = ["syslog-ng"]
description = "High level bindings for syslog-ng"
license = "MIT/Apache-2.0"

[dependencies]
log = "0.3"
syslog-ng-sys = "0.3"
glib = "0.0.8"
glib-sys = "0.3.0"

[[test]]
name = "template_functions"
harness = false

[[test]]
name = "dummy-parser"
